--- a/src/existant.tex
+++ b/src/existant.tex
@@ -1,4 +1,5 @@
 \chapter{État de l'art}
+\label{chapterStateOfTheArt}
 L'état de l'art des domaines relatifs à ce stage s'intéressera à trois aspects : 
 \begin{itemize}
 	\item Les avancées en réseaux de Petri, qui sont au cœur du modèle.
@@ -92,7 +93,7 @@ Il est notamment utilisé dans le projet \ac{OSSIA} à des fins de validation.
 
 \subparagraph{PNlib} \cite{pross2014object} est un outil de simulation orienté objet visant le cas particulier des processus biologiques.
 
-\brand{PNlib} a été réalisé en \gls{modelica} et s'y intègre facilement.
+La bibliothèque a été réalisé en \gls{modelica} et s'y intègre facilement.
 
 \subparagraph{Snoopy} \cite{heiner2012snoopy} est un autre cadre logiciel à vocation unificatrice, permettant aussi l'utilisation de la couleur. Il supporte la hiérarchie.
 
