--- a/src/formalisation/formalisation.tex
+++ b/src/formalisation/formalisation.tex
@@ -1,4 +1,5 @@
 \chapter{Apports au problème}
+\label{chapterApports}
 \section{Introduction}
 Le but de cette partie est de fournir une sémantique  personnalisée pour la distribution de l'exécution d'un réseau de Petri sur un réseau informatique, en prenant en compte les délais dûs à la répartition physique des machines et les contraintes issues du projet \ac{OSSIA}.
 
