--- a/src/personnalisation.tex
+++ b/src/personnalisation.tex
@@ -85,3 +85,6 @@ escapeinside={\%*}{*)}
 \DeclareMathOperator{\post}{Post}
 \DeclareMathOperator{\shared}{Shared}
 \DeclareMathOperator{\memory}{Memory}
+
+% Ajout d'un type appendices
+\crefname{appchap}{annexe}{annexes}
