--- a/src/rapport.tex
+++ b/src/rapport.tex
@@ -11,7 +11,7 @@
 \usepackage{caption}
 \usepackage[T1]{fontenc}
 \usepackage{relsize}
-\usepackage[usenames,dvipsnames]{color}
+\usepackage[usenames,dvipsnames,svgnames]{xcolor}
 \usepackage{listings}
 \usepackage{float}
 \usepackage{kpfonts}
@@ -34,12 +34,12 @@
 \usepackage{tabu}
 \usepackage{mfirstuc}
 \usepackage{mdframed}
-
+\usepackage[toc,page]{appendix}
 % Pour figures en paysage
 \usepackage{wrapfig}
 \usepackage{lscape}
 \usepackage{rotating}
-
+\usepackage{pdfpages}
 \usepackage{caption}
 
 \usepackage[unicode]{hyperref}
@@ -47,6 +47,7 @@
 \usepackage[numbers,longnamesfirst]{natbib}
 
 \usepackage{cleveref}
+
 
 %\LoadPackagesNow
 
@@ -70,7 +71,7 @@
 \include{implementation}
 \include{resultats}
 \include{conclusion}
-
+\input{annexes.tex}
 \printglossaries
 \bibliographystyle{alpha}
 \bibliography{stagepetri}
