--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -50,6 +50,12 @@
 	description={des ensembles de données extrêmement volumineux et difficiles à gérer par des méthodes standard, comme par exemple les résultats d'expériences scientifiques qui collectent sur une longue durée à court intervalle, ou bien les bases de données de sites comme \brand{Google}, \brand{Wikipédia}\dots}
 }
 
+\newglossaryentry{reactiveml}
+{
+	name={Reactive ML},
+	description={Un langage de programmation dérivé de \brand{ML}, qui cible les systèmes interactifs, comme les jeux vidéos, ou les interfaces graphiques}	
+}
+
 \newglossaryentry{mutex}
 {
 	name=mutex,
