--- a/src/personnalisation.tex
+++ b/src/personnalisation.tex
@@ -88,3 +88,6 @@ escapeinside={\%*}{*)}
 
 % Ajout d'un type appendices
 \crefname{appchap}{annexe}{annexes}
+
+% Pour timeline verticale
+\newcommand{\vtbullet}{\hspace{-2.3pt}$\bullet$ \hspace{5pt}}
