--- a/src/existant.tex
+++ b/src/existant.tex
@@ -123,6 +123,11 @@ La \gls{cyberphysique} peut tirer un certain bénéfice des réseaux de Petri po
 
 Des réseaux de Petri spatio-temporels ont été introduits\cite{zhang2014modeling} pour gérer les aspects de déplacements physique au cours du temps dans ce cas.
 
+\subsubsection{Application aux jeux vidéos}
+Les jeux vidéos peuvent parfois se présenter comme des processus scénarisés, que ce soit dans le temps, ou dans l'espace.
+Une autre famille de réseaux spatio-temporels ont été introduits dans \cite{natkin2004new}, servant à prévoir et agir en fonction des déplacements des joueurs dans des niveaux de jeu.
+
+Plus récemment, une classe de réseaux de Petri dédiée à des buts organisationnels, les WorkFlow nets\cite{oliveira2011game}, ont été appliqués à la modélisation de jeu vidéo.
 \section{Répartition}
 La répartition (\textit{distribution}) est un second point important de ce stage. C'est un domaine qui est souvent très proche de la technique : le besoin d'utiliser des algorithmes répartis provient souvent de contraintes matérielles ou temporelles.
 
