--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -4,6 +4,22 @@
 	description={un modèle de langage servant lui-même à la modélisation}	
 }
 
+\newglossaryentry{CMake}
+{
+	name={CMake}, 
+	description={un outil de génération de chaîne de compilation multi-plateformes}
+}
+\newglossaryentry{contintegr}
+{
+	name={intégration continue},
+	description={une méthode de développement logicielle qui compile et réalise des tests à chaque soumission de nouveau code sur le système de gestion de versions}
+}
+\newglossaryentry{macports}
+{
+	name=MacPorts, 
+	description={un système de gestion de logiciels et de paquetages très utilisé sous \brand{Mac OS X}}
+}
+
 \newglossaryentry{graphviz}
 {
 	name=GraphViz, 
