--- a/src/problematique.tex
+++ b/src/problematique.tex
@@ -221,19 +221,20 @@ Je me suis principalement organisé en sprints de 15 jours, qui pouvaient parfoi
 \begin{table}[H]
 	\centering
 	\begin{tabu} to \linewidth {r |@{\vtbullet} X[l]}
-		Début à mi-février & Prise en main du sujet \\
-		10 et 11 février & Première réunion \ac{OSSIA} \\
-		Mi à fin février & Recherche d'existant et portage de \brand{Jamoma} et i-score sous Linux \\
-		Début à mi-mars & Conception de l'application de test de répartition, portage sous \brand{Android} et plateformes \brand{ARM} \\
-		14 et 15 mars & Seconde réunion \ac{OSSIA} \\
-		Mi-mars & Préparation et rendu du rapport à 6 semaines pour l'ENSEIRB-MATMECA. \\
-		20 mars & Présentation à un GT du Scrime \\
-		Mi à fin mars &  Essais de conception des algorithmes de répartition de réseaux de Petri \\
-		Début à mi-avril & Formalisation et vérification, portage de \brand{Jamoma} sous CMake \\
-		Mi à fin avril & Conception de l'\ac{API} dédiée à la répartition dans Score \\
-		Début à mi-mai & Rédaction du présent mémoire \\
-		14, 15, 16 Mai & Troisième réunion \ac{OSSIA} \\
-		Mi à fin mai & Rédaction du mémoire pour l'ENSEIRB-MATMECA, préparation des soutenances \\
+		Début à mi-février & Prise en main du sujet \newline \\
+		10 et 11 février & Première réunion \ac{OSSIA} \newline \\
+		Mi à fin février & Recherche d'existant et portage de \brand{Jamoma} et i-score sous Linux \newline \\
+		Début à mi-mars & Conception de l'application de test de répartition, portage sous \brand{Android} et plate-formes \brand{ARM} \newline \\
+		14 et 15 mars & Seconde réunion \ac{OSSIA} \newline \\
+		Mi-mars & Préparation et rendu du rapport à 6 semaines pour l'ENSEIRB-MATMECA. \newline \\
+		20 mars & Présentation à un GT du Scrime \newline \\
+		Mi à fin mars &  Essais de conception des algorithmes de répartition de réseaux de Petri \newline \\
+		Début à mi-avril & Formalisation et vérification, portage de \brand{Jamoma} sous \gls{CMake} \newline \\
+		Mi à fin avril & Conception et implémentation de l'\ac{API} dédiée à la répartition dans Score \newline \\
+		Début à mi-mai & Rédaction du présent mémoire \newline \\
+		14, 15, 16 Mai & Troisième réunion \ac{OSSIA} \newline \\
+		Mi à fin mai & Rédaction du mémoire pour l'ENSEIRB-MATMECA, préparation des soutenances \newline \\
+		Début Juin & Continuation de l'implémentation, soutenances \\
 	\end{tabu}
 	\caption{Organisation au cours du stage}
 	\label{tbl.Timeline}
