--- a/src/rapport.tex
+++ b/src/rapport.tex
@@ -39,6 +39,7 @@
 \usepackage{lscape}
 \usepackage{rotating}
 \usepackage{pdfpages}
+\usepackage{siunitx}
 \usepackage{caption}
 
 \usepackage[unicode]{hyperref}
