--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -457,4 +457,23 @@ address = {Los Alamitos, CA, USA},
 	year={2013}
 }
 
+@inproceedings{natkin2004new,
+	title={A new methodology for spatiotemporal game design},
+	author={Natkin, St{\'e}phane and Vega, Liliana and Gr{\"u}nvogel, S},
+	booktitle={Mehdi, Q. and Gough, N.,(Eds.). Proceedings of CGAIDE 2004, 5th Game-On International Conference on Computer Games: Artificial Intelligence, Design and Education},
+	pages={109--113},
+	year={2004},
+	organization={Citeseer}
+}
+
+@INPROCEEDINGS{oliveira2011game, 
+	author={de Oliveira, G.W. and Julia, S. and Soares Passos, L.M.}, 
+	booktitle={Systems, Man, and Cybernetics (SMC), 2011 IEEE International Conference on}, 
+	title={Game modeling using WorkFlow nets}, 
+	year={2011}, 
+	month={Oct}, 
+	pages={838-843}, 
+	keywords={Petri nets;computer games;formal logic;trees (mathematics);Petri net;WorkFlow nets;game modeling;linear logic;proof trees;video game design process;Analytical models;Availability;Context;Games;Unified modeling language;Vegetation;Visualization;Linear logic;Petri net;Soundness;Video Games;WorkFlow net}, 
+	doi={10.1109/ICSMC.2011.6083757}, 
+	ISSN={1062-922X},}
 	
