--- a/src/debut.tex
+++ b/src/debut.tex
@@ -21,7 +21,7 @@
 
 \selectlanguage{english}
 \begin{abstract}
-TODO abstract (en anglais?)
+	 The interactive scores paradigm offers a way to create interactives scenarios which have many different applications. Distributed systems are more and more common, however their application to scoring and artistic performance is still in its infancy. This report studies the existing links between the two and then devices a way to distribute the execution of interactive scores using petri nets. Multiple examples are proposed, as well as the beginning of an implementation in the i-score software.
 \end{abstract}
 \selectlanguage{french}
 
