--- a/src/formalisation/ameliorations2f.tex
+++ b/src/formalisation/ameliorations2f.tex
@@ -71,12 +71,11 @@ Enfin, pour des questions d'ergonomie, il pourrait être intéressant d'avoir un
 \end{itemize}
 
 \subsection{Cas du changement de vitesse}
-Le formalisme permet de changer la vitesse d'exécution, en multipliant les durées des transitions par un facteur numérique.
+Le formalisme~\cite{allombert2010virage} permet de changer la vitesse d'exécution, en multipliant les durées des transitions par un facteur numérique.
 
 Pour conserver la correction du formalisme décrit ici, il ne faut pas multiplier le facteur de décalage entre les nœuds, car il ne dépend pas de la vitesse d'exécution du morceau, mais est une caractéristique physique du réseau.
 
-Il serait par exemple possible d'affecter une fonction affine de la forme $av + b$ aux transitions, ou $a$ est la durée de la transition canonique, $v$ le coefficient multiplicateur de vitesse, entre $O.5$ et $2$, et $b$ le délai.
-(TODO citer thèse modification vitesse)
+Il serait par exemple possible d'affecter une fonction affine de la forme $av + b$ aux transitions, ou $a$ est la durée de la transition canonique, $v$ le coefficient multiplicateur de vitesse, entre $O.5$ et $2$, et $b$ le délai. 
 
 \subsection{Simplifications}
 \subsubsection{$\alpha$-transitions}
