--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -4,16 +4,24 @@
 	description={un modèle de langage servant lui-même à la modélisation}	
 }
 
+\newglossaryentry{zeroconf}
+{
+	name={ZeroConf},
+	description={un mécanisme normalisé de prise de connaissance des services offerts sur un réseau local, principalement connu grâce à l'implémentation d'\brand{Apple} nommée \brand{Bonjour}}	
+}
+
 \newglossaryentry{CMake}
 {
 	name={CMake}, 
 	description={un outil de génération de chaîne de compilation multi-plateformes}
 }
+
 \newglossaryentry{contintegr}
 {
 	name={intégration continue},
 	description={une méthode de développement logicielle qui compile et réalise des tests à chaque soumission de nouveau code sur le système de gestion de versions}
 }
+
 \newglossaryentry{macports}
 {
 	name=MacPorts, 
