--- a/src/rapport.tex
+++ b/src/rapport.tex
@@ -7,7 +7,7 @@
 \usepackage{fixltx2e}
 \usepackage{booktabs}
 \usepackage[utf8]{inputenc}
-\usepackage{babel}
+\usepackage[french,english]{babel}
 \usepackage{caption}
 \usepackage[T1]{fontenc}
 \usepackage{relsize}
@@ -63,6 +63,7 @@
 
 \begin{document}
 \input{debut}
+
 \include{intro}
 \include{problematique}
 \include{existant}
@@ -71,6 +72,7 @@
 \include{implementation}
 \include{resultats}
 \include{conclusion}
+
 \input{annexes.tex}
 \printglossaries
 \bibliographystyle{alpha}
