--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -1,3 +1,10 @@
+@phdthesis{allombert2009aspects,
+	title={Aspects temporels d’un systeme de partitions musicales interactives pour la composition et l’interpr{\'e}tation},
+	author={Allombert, Antoine},
+	year={2009},
+	school={PhD thesis, Universit{\'e} de Bordeaux}
+}
+
 @inproceedings{allombert2007system,
   title={A system of interactive scores based on Petri nets},
   author={Allombert, Antoine and Assayag, G{\'e}rard and Desainte-Catherine, Myriam and others},
@@ -16,7 +23,7 @@
 }
 
 @inproceedings{allombert2010virage,
-  title={VIRAGE: DESIGNING AN INTERACTIVE INTERMEDIA SEQUENCER FROM USERS REQUIREMENTS AND THEORETICAL BACKGROUND},
+  title={VIRAGE: Designing an Interactive Intermedia Sequencer from Users Requirements and Theoretical Background},
   author={Allombert, Antoine and Marczak, Raph{\"e}l and Desainte-Catherine, Myriam and Baltazar, Pascal and Garnier, Laurent and Yeti, Blue},
   booktitle={Proceedings of the International Computer Music Conference},
   year={2010}
